--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,7 @@
     <string name="text_label_bed_response">Bed Response</string>
     <string name="body_3d">Body 3D</string>
 
+
+    <string name="bed_data">Bed Data</string>
+
 </resources>
